<resources>
    <string name="app_name">Mint Life Sciences</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="medicine_image_description">Medicine image</string>
    <string name="brand_image_description">Brand image</string>
    <string name="play_video_description">Play video</string>
    <string name="share_description">Share</string>
    <string name="back_description">Go back</string>
    <string name="next_description">Go to next</string>
    <string name="delete_doctor">Delete doctor</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_us">
       Mint Life Sciences Pvt. Ltd. excels in the manufacturing and distribution of a diverse array
        of API, pharmaceutical and healthcare products. Our commitment to quality is underscored by
        our ISO 9001:2015 Certification, and our advanced manufacturing facilities are fully compliant
        with WHO-GMP standards. Within our extensive product portfolio, we offer a range of critical
        healthcare solutions. This includes Injectable formulations, Tablets, Capsules, Soft Gelatin
        Capsules, Oral Liquid preparations such as Syrups and Suspensions, as well as Oral Dry Syrups.

    </string>
    <string name="about_us2">
        Our offerings extend to External Liquids, Ointments, Creams, Beta lactum Products, General
        Pharmaceuticals, Nutraceuticals, and even specialized products like Soaps, Shampoo, Eye Drops,
        Ear Drops, and Oral Sachets and powders. Moreover, we proudly manufacture External Powders,
        Cosmetics, and hospital grade disinfectants, reflecting our commitment to providing comprehensive
        healthcare solutions for both humans and animals. With a dedication to excellence and a focus
        on research-driven, high-quality production, we stand as a trusted partner in the pharmaceutical
        industry, dedicated to improving health and well-being on a global scale. Our relentless pursuit
        of innovation and adherence to strict quality standards sets us apart as a leader in the
        pharmaceutical industry, ensuring that our products consistently meet the highest levels of
        efficacy and safety.
    </string>
</resources>